<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/button_1"
        android:textSize="@dimen/button_text"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintTop_toTopOf="@+id/button_2" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_2"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/button_3"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@+id/button_divide"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_4"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toStartOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_5"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toStartOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/button_6"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_3" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_7"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toStartOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_8"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toStartOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/button_9"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toBottomOf="@+id/button_6" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="184dp"
        android:layout_height="48dp"
        android:text="@string/button_0"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toStartOf="@+id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_8" />

    <Button
        android:id="@+id/button_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/button_point"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toEndOf="@+id/button_0"
        app:layout_constraintTop_toBottomOf="@+id/button_9" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="41dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_minus"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toEndOf="@+id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/button_3" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="41dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_plus"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button_minus"
        app:layout_constraintStart_toEndOf="@+id/button_3" />

    <Button
        android:id="@+id/button_equally"
        android:layout_width="41dp"
        android:layout_height="96dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_equally"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toEndOf="@+id/button_9"
        app:layout_constraintTop_toBottomOf="@+id/button_6" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_reset"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button_1"
        app:layout_constraintStart_toStartOf="@+id/button_1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_percent"
        android:layout_width="41dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_percent"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toEndOf="@+id/button_6"
        app:layout_constraintTop_toTopOf="@+id/button_divide" />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_multiply"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button_2"
        app:layout_constraintStart_toStartOf="@+id/button_2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/button_divide"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toEndOf="@+id/button_multiply"
        app:layout_constraintTop_toTopOf="@+id/button_multiply"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="324dp"
        android:layout_height="53dp"
        android:background="#DFDCDC"
        android:text="@string/textview"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146"
        tools:text="123" />


</androidx.constraintlayout.widget.ConstraintLayout>